# Sollens

./: .gitignore  ARCHITECTURE.md  Anchor.toml  CHECKLIST.md  DEPLOYMENT.md  PRODUCTION_SETUP.md  PROJECT_OVERVIEW.md  QUICK_REFERENCE.md  README.md  docker-compose.yml  package-lock.json  package.json  render.yaml  setup.sh
.github/workflows/: ci.yml
backend/: .env.example  .env.production  alembic.ini  database.py  deploy-worker.sh  deploy.sh  main.py  requirements.txt
backend/api/routes/: score.py  webhook.py
backend/models/: wallet.py
backend/scorer/: engine.py  helius.py
backend/scorer/factors/: __init__.py  dao_participation.py  defi_activity.py  repayment.py  token_diversity.py  wallet_age.py
backend/tasks/: score_job.py
frontend/: .env.local.example  .env.production  next.config.js  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/lender/: page.tsx
frontend/components/: MintButton.tsx  ScoreBreakdown.tsx  ScoreCard.tsx  WalletConnect.tsx
frontend/lib/: anchor.ts  helius.ts
programs/solscore/: Cargo.toml
programs/solscore/src/: lib.rs
programs/solscore/src/instructions/: initialize.rs  mint_nft.rs  mod.rs  query_score.rs  update_score.rs
programs/solscore/src/state/: mod.rs  score_account.rs
tests/: solscore.ts  test_scorer.py
