[package]
name = "solscore"
version = "0.1.0"
description = "Decentralized On-Chain Credit Scoring System"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solscore"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
mpl-token-metadata = "4.1.2"
